assert-struct/tests/compile_fail/map_pattern_on_non_map.stderr
error[E0277]: the type `str` cannot be indexed by `&String`
  --> tests/compile_fail/map_pattern_on_non_map.rs:17:18
   |
17 |         name: #{ "key": "value" },
   |                  ^^^^^ string indices are ranges of `usize`
   |
   = help: the trait `SliceIndex<str>` is not implemented for `&String`
note: required by a bound in `core::str::<impl str>::get`
  --> $RUST/core/src/str/mod.rs
   |
   |     pub const fn get<I: [const] SliceIndex<str>>(&self, i: I) -> Option<&I::Output> {
   |                         ^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `core::str::<impl str>::get`

error[E0282]: type annotations needed for `&&_`
  --> tests/compile_fail/map_pattern_on_non_map.rs:17:25
   |
17 |         name: #{ "key": "value" },
   |                         ^^^^^^^
   |
help: consider giving `__assert_struct_tmp` an explicit type, where the placeholders `_` are specified
   |
17 |         name: #{ "key": "value": &&_ },
   |                                +++++
